# pdf-to-md-cli

./: .gitignore  Cargo.toml  README.md  build.rs
src/: converter.rs  logger.rs  main.rs  models.rs  processor.rs
src/transformations/: common.rs  compact_lines.rs  detect_code_blocks.rs  detect_headers.rs  detect_toc.rs  mod.rs  remove_repetitive_elements.rs  stats.rs  to_markdown.rs
