[package]
name = "pdf-to-md"
version = "0.1.0"
edition = "2021"
description = "A fast, parallel PDF to Markdown converter CLI"
authors = []

[[bin]]
name = "pdf-to-md"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
pdfium-render = { version = "0.8", features = ["thread_safe"] }
rayon = "1"
anyhow = "1"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
